# libnunchuk

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md  README_linux.md  io.nunchuk.pem
contrib/sqlite/: CMakeLists.txt
contrib/sqlite/sqlcipher/: sqlite3.h
embedded/: CMakeLists.txt  embeddedrpc.cpp  embeddedrpc.h
examples/: .gitignore  CMakeLists.txt  bsms.cpp  groupwallet.cpp  main.cpp  miniscriptwallet.cpp  send_and_receive_test_vectors.json  test_silentpayment_sending.cpp
hooks/: pre-commit
include/: nunchuk.h  nunchukmatrix.h
src/: coinselector.cpp  coinselector.h  compiler.cpp  config.h.in  coreutils.cpp  coreutils.h  descriptor.cpp  descriptor.h  electrumclient.cpp  electrumclient.h  groupservice.cpp  groupservice.h  hwiservice.cpp  hwiservice.h  nunchukgroupwallet.cpp  nunchukimpl.cpp  nunchukimpl.h  nunchukmatriximpl.cpp  nunchukmatriximpl.h  nunchuktapprotocol.cpp  nunchukutils.cpp  rpcclient.cpp  rpcclient.h  selector.cpp  selector.h  signingprovider.cpp  signingprovider.h  softwaresigner.cpp  softwaresigner.h  spender.cpp  spender.h  storage.cpp  storage.h  synchronizer.cpp  synchronizer.h
src/backend/: synchronizer.cpp  synchronizer.h
src/backend/corerpc/: client.cpp  client.h  corerpcclient.cpp  httplib5.h  synchronizer.cpp  synchronizer.h
src/backend/electrum/: client.cpp  client.h  synchronizer.cpp  synchronizer.h
src/dto/: appsettings.cpp  coincollection.cpp  cointag.cpp  device.cpp  groupconfig.cpp  groupdummytx.cpp  groupmessage.cpp  groupplatformkey.cpp  groupsandbox.cpp  groupwalletconfig.cpp  mastersigner.cpp  primarykey.cpp  roomevent.cpp  roomtransaction.cpp  roomwallet.cpp  sandboxgroup.cpp  satscardstatus.cpp  scriptnode.cpp  singlesigner.cpp  tapsignerstatus.cpp  timelock.cpp  transaction.cpp  unspentoutput.cpp  wallet.cpp
src/miniscript/: compiler.cpp  compiler.h  miniscript.cpp  miniscript.h  timeline.cpp  timeline.h  util.cpp  util.h
src/storage/: appstatedb.cpp  appstatedb.h  common.cpp  common.h  db.cpp  db.h  groupdb.cpp  groupdb.h  localdb.cpp  localdb.h  primarydb.cpp  primarydb.h  roomdb.cpp  roomdb.h  signerdb.cpp  signerdb.h  storage.cpp  storage.h  tapprotocoldb.cpp  tapprotocoldb.h  walletdb.cpp  walletdb.h
src/utils/: addressutils.hpp  attachment.hpp  bcr2.hpp  bip32.hpp  bip388.hpp  bip85.cpp  bip85.h  bsms.hpp  chain.hpp  coldcard.cpp  coldcard.hpp  enumconverter.hpp  errorutils.hpp  httplib.h  loguru.cpp  loguru.hpp  multisigconfig.hpp  ndef.hpp  passport.hpp  quote.hpp  rfc2440.hpp  rsa.hpp  secretbox.cpp  secretbox.h  silentpayment.hpp  spanparsing.cpp  stringutils.hpp  txutils.hpp  unchained.hpp
tests/: CMakeLists.txt
tests/src/: coreutils_test.cpp  descriptor_test.cpp  nunchukutils_test.cpp
tests/src/utils/: addressutils_test.cpp  attachment_test.cpp  bip32_test.cpp  silentpayment_kgroup_test.cpp  silentpayment_test.cpp  trnative_test.cpp  txutils_test.cpp
